# QCoCircuits

./: .gitignore  README.md  requirements.txt  setup.cfg
src/qce_circuit/: __init__.py  definitions.py  examples.ipynb
src/qce_circuit/addon_openql/: __init__.py  factory_manager.py  intrf_openql_factory.py  platform_manager.py
src/qce_circuit/addon_stim/: __init__.py  circuit_operations.py  factory_manager.py  intrf_noise_factory.py  intrf_stim_factory.py  noise_factory_manager.py  noise_settings_manager.py
src/qce_circuit/connectivity/: __init__.py  connectivity_repetition_code.py  connectivity_surface_code.py  generic_gate_sequence.py  intrf_channel_identifier.py  intrf_connectivity.py  intrf_connectivity_dance.py  intrf_connectivity_gate_sequence.py  intrf_connectivity_surface_code.py
src/qce_circuit/language/: __init__.py  declarative_circuit.py  intrf_declarative_circuit.py
src/qce_circuit/structure/: circuit_modifiers.py  circuit_operations.py  intrf_acquisition_operation.py  intrf_channel_identifier.py  intrf_circuit_operation.py  intrf_circuit_operation_composite.py  intrf_registry.py  registry_acquisition.py  registry_duration.py  registry_repetition.py
src/qce_circuit/utilities/: array_manipulation.py  combinatorics.py  readwrite_json.py  (+6 more)
tests/: .coveragerc
tests/addon_openql/: test_openql_factory.py
tests/addon_stim/: test_noise_factory.py  test_stim_factory.py
tests/language/: test_declarative_circuit.py
tests/structure/: test_intrf_circuit_operation_composite.py  test_registry_acquisition.py
tests/visualization/: test_display_circuit.py
(+57 files in other folders)
