[metadata]
name = qcecircuits
version = 0.1.0
author = S.L.M.vanderMeer
author_email = seanmeer@gmail.com
maintainer = S.L.M.vanderMeer
url = https://github.com/MiniSean/QCoCircuits
description = Functionality for writing quantum circuits and mapping them to common quantum circuit libraries.
long_description = file: README.md

[options]
# find:
packages = find:
# Package inside dir
package_dir=
    =src
# Required library installations
install_requires =
    numpy
    pyyaml
    matplotlib>=3.3.4  # To include subplot_mosaic
    coverage
    matplotlib
    stim
    qutechopenql
# Required additional data files
zip_safe = True
include_package_data = True

[options.packages.find]
where=src
